--- a/package.json
+++ b/package.json
@@ -1,35 +1,54 @@
 {
-	"name": "search",
-	"version": "0.0.0",
-	"private": true,
-	"type": "module",
-	"engines": {
-		"node": "^20.19.0 || >=22.12.0"
-	},
-	"scripts": {
-		"dev": "vite",
-		"build": "run-p type-check \"build-only {@}\" --",
-		"preview": "bun run build && wrangler dev",
-		"build-only": "vite build",
-		"type-check": "vue-tsc --build",
-		"deploy": "bun run build && wrangler deploy",
-		"cf-typegen": "wrangler types"
-	},
-	"dependencies": {
-		"vue": "^3.5.25",
-		"vue-router": "^4.6.3"
-	},
-	"devDependencies": {
-		"@cloudflare/vite-plugin": "^1.18.0",
-		"@tsconfig/node24": "^24.0.3",
-		"@types/node": "^24.10.1",
-		"@vitejs/plugin-vue": "^6.0.2",
-		"@vue/tsconfig": "^0.8.1",
-		"npm-run-all2": "^8.0.4",
-		"typescript": "~5.9.0",
-		"vite": "^7.2.4",
-		"vite-plugin-vue-devtools": "^8.0.5",
-		"vue-tsc": "^3.1.5",
-		"wrangler": "^4.55.0"
-	}
+    "name": "search",
+    "version": "0.0.0",
+    "private": true,
+    "type": "module",
+    "engines": {
+        "node": "^20.19.0 || >=22.12.0"
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "run-p type-check \"build-only {@}\" --",
+        "preview": "bun run build && wrangler dev",
+        "build-only": "vite build",
+        "type-check": "vue-tsc --build",
+        "deploy": "bun run build && wrangler deploy",
+        "cf-typegen": "wrangler types",
+        "test": "vitest",
+        "test:watch": "vitest --watch",
+        "test:ui": "vitest --ui",
+        "lint": "biome check",
+        "format": "biome format --write",
+        "lint:fix": "biome check --write"
+    },
+    "dependencies": {
+        "an-array-of-english-words": "^2.0.0",
+        "hono": "^4.11.1",
+        "predictionary": "^1.6.0",
+        "vue": "^3.5.25",
+        "vue-i18n": "^12.0.0-alpha.3",
+        "vue-router": "^4.6.3",
+        "xlsx": "^0.18.5"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "2.3.10",
+        "@cloudflare/vite-plugin": "^1.18.0",
+        "@cloudflare/workers-types": "^4.20251216.0",
+        "@tsconfig/node24": "^24.0.3",
+        "@types/node": "^24.10.1",
+        "@unocss/preset-web-fonts": "^66.5.10",
+        "@unocss/preset-wind3": "^66.5.10",
+        "@unocss/reset": "^66.5.10",
+        "@vitejs/plugin-vue": "^6.0.2",
+        "@vitest/ui": "^4.0.16",
+        "@vue/tsconfig": "^0.8.1",
+        "npm-run-all2": "^8.0.4",
+        "typescript": "~5.9.0",
+        "unocss": "^66.5.10",
+        "vite": "^7.2.4",
+        "vite-plugin-vue-devtools": "^8.0.5",
+        "vitest": "^4.0.16",
+        "vue-tsc": "^3.1.5",
+        "wrangler": "^4.55.0"
+    }
 }
