--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "dev": "vite",
         "build": "run-p type-check \"build-only {@}\" --",
-        "preview": "bun run build && wrangler dev",
+        "preview": "vite preview",
         "build-only": "vite build",
         "type-check": "vue-tsc --build",
         "deploy": "bun run build && wrangler deploy",
@@ -34,20 +34,21 @@
         "@biomejs/biome": "2.3.10",
         "@cloudflare/vite-plugin": "^1.18.0",
         "@cloudflare/workers-types": "^4.20251216.0",
+        "@intlify/unplugin-vue-i18n": "^11.0.3",
         "@tsconfig/node24": "^24.0.3",
         "@types/node": "^24.10.1",
         "@unocss/preset-web-fonts": "^66.5.10",
         "@unocss/preset-wind3": "^66.5.10",
         "@unocss/reset": "^66.5.10",
         "@vitejs/plugin-vue": "^6.0.2",
-        "@vitest/ui": "^4.0.16",
+        "@vitest/ui": "3.2.4",
         "@vue/tsconfig": "^0.8.1",
         "npm-run-all2": "^8.0.4",
         "typescript": "~5.9.0",
         "unocss": "^66.5.10",
         "vite": "^7.2.4",
         "vite-plugin-vue-devtools": "^8.0.5",
-        "vitest": "^4.0.16",
+        "vitest": "3.2.4",
         "vue-tsc": "^3.1.5",
         "wrangler": "^4.55.0"
     }
